[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/boost_counter.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/villager_counter.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/in_game.gd" type="Script" id=3]
[ext_resource path="res://ui/health_counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/pause_menu/pause_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/main_theme.tres" type="Theme" id=6]

[node name="InGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 475.0
margin_bottom = 265.0

[node name="VillagerCounter" parent="MarginContainer/Control" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -16.5
margin_right = 16.5
margin_bottom = 14.0

[node name="BoostCounter" parent="MarginContainer/Control" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 8.0

[node name="HealthCounter" parent="MarginContainer/Control" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -48.0
margin_right = 0.0
margin_bottom = 16.0
